Collection single page brands alphabet. CSS fixes

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -1,7 +1,6 @@
 @@include('parts/header.html', { title: 'Производители: 41ZERO42' })
 
 <main class="page-main">
-
 	<!-- Page heading -->
 	<div class="page-heading">
 		<div class="container">
@@ -9,94 +8,197 @@
 				<ul class="breadcrumbs-list" itemscope itemtype="https://schema.org/BreadcrumbList">
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
 						<a itemprop="item" href="page-home.html" rel="home"><span itemprop="name">Главная</span></a>
-						<meta itemprop="position" content="0">
+						<meta itemprop="position" content="0" />
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
 						<a itemprop="item" href="page-brands.html"><span itemprop="name">Производители</span></a>
-						<meta itemprop="position" content="1">
+						<meta itemprop="position" content="1" />
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
 						<span itemprop="name">41ZERO42</span>
-						<meta itemprop="position" content="2">
+						<meta itemprop="position" content="2" />
 					</li>
 				</ul>
 			</div>
 			<h1 class="title text-xxl">41ZERO42</h1>
-		</div><!-- /.container -->
-	</div><!-- /.page-heading -->
+		</div>
+		<!-- /.container -->
+	</div>
+	<!-- /.page-heading -->
 
 	<!-- Page content -->
 	<div class="page-single-brands">
 		<div class="container">
-
 			<!-- Section: About brand -->
 			<section class="about">
 				<div class="about-heading">
 					<button type="button" class="about-heading-btn btn btn-dropdown">
 						<span>Коллекции 41zero42</span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown">
+							<use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use>
+						</svg>
 					</button>
 					<div class="about-heading-dropdown">
-						<ul class="row row-items-8 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-6">
-							<li class="col"><a href="#">ABK</a></li>
-							<li class="col"><a href="#">ABSOLUT CERAMICA</a></li>
-							<li class="col"><a href="#">ADEX</a></li>
-							<li class="col"><a href="#">ALELUIA CERAMICAS</a></li>
-							<li class="col"><a href="#">ALMERA CERAMICA</a></li>
-							<li class="col"><a href="#">ATLAS CONCORDE RUSSIA</a></li>
-							<li class="col"><a href="#">Eurotile Ceramica RUSSIA</a></li>
-							<li class="col"><a href="#">Mykonos Ceramica</a></li>
-							<li class="col"><a href="#">Kutahya Seramik</a></li>
-							<li class="col"><a href="#">LOVE CERAMIC TILES</a></li>
-						</ul>
+						<div class="brands">
+							<div class="brands-item">
+								<div class="brands-letter">A</div>
+								<ul class="brands-list">
+									<li><a href="#">ABK</a></li>
+									<li><a href="#">ABSOLUT CERAMICA</a></li>
+									<li><a href="#">ADEX</a></li>
+									<li><a href="#">ALELUIA CERAMICAS</a></li>
+									<li><a href="#">ALMERA CERAMICA</a></li>
+									<li><a href="#">ATLAS CONCORDE RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+							<div class="brands-item">
+								<div class="brands-letter">B</div>
+								<ul class="brands-list">
+									<li><a href="#">ATLAS CONCORDE RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+							<div class="brand-item">
+								<div class="brands-letter">C</div>
+								<ul class="brands-list">
+									<li><a href="#">ABK</a></li>
+									<li><a href="#">ABSOLUT CERAMICA</a></li>
+									<li><a href="#">ADEX</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+							<div class="brand-item">
+								<div class="brands-letter">D</div>
+								<ul class="brands-list">
+									<li><a href="#">ATLAS CONCORDE RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+							<div class="brand-item">
+								<div class="brands-letter">E</div>
+								<ul class="brands-list">
+									<li><a href="#">ABK</a></li>
+									<li><a href="#">ABSOLUT CERAMICA</a></li>
+									<li><a href="#">ADEX</a></li>
+									<li><a href="#">ALELUIA CERAMICAS</a></li>
+									<li><a href="#">ALMERA CERAMICA</a></li>
+									<li><a href="#">ATLAS CONCORDE RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+							<div class="brand-item">
+								<div class="brands-letter">F</div>
+								<ul class="brands-list">
+									<li><a href="#">ATLAS CONCORDE RUSSIA</a></li>
+									<li><a href="#">Eurotile Ceramica RUSSIA</a></li>
+									<li><a href="#">Mykonos Ceramica</a></li>
+									<li><a href="#">Kutahya Seramik</a></li>
+									<li><a href="#">LOVE CERAMIC TILES</a></li>
+								</ul>
+							</div>
+							<!-- /.brand-item -->
+						</div>
+						<!-- /.brand -->
 					</div>
-				</div><!-- /.about-heading -->
+				</div>
+				<!-- /.about-heading -->
 				<div class="about-content">
 					<div class="row row-items-24">
 						<div class="col-md order-1 order-md-0">
 							<div class="readmore">
 								<div class="about-content-text readmore-list">
-									<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их. Большое значение при разработке керамической плитки 41zero42 придается концепции трансверсальности между коллекциями, чтобы подчеркнуть лучший способ выразить интегрированный проект.</p>
-									<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их. Большое значение при разработке керамической плитки 41zero42 придается концепции трансверсальности между коллекциями, чтобы подчеркнуть лучший способ выразить интегрированный проект.</p>
+									<p>За последние несколько лет в России активно развивается производство изделий из керамики и керамогранита для отделки помещений и фасадов зданий. Плитка Kerama Marazzi появилась на рынке в 1988 году, и с того момента на заводе была проведена не одна реорганизация, целью которых было вывести компанию на мировой уровень.</p>
+									<h2>Особенности завода</h2>
+									<ul>
+									<li>Помимо основных коллекций для облицовки пола и стен также выпускаются такие декоративные элементы, как ступени, бордюры, плинтуса и т.д. Широкий ассортимент включает свыше 2000 наименований, выполненных в разных форматах, стилях, цветовых решениях.</li>
+									<li>Основной «фишкой» новых коллекций является соблюдение стилистики определенной страны. Применение достопримечательностей, пейзажей, других отличий позволит создать уникальный дизайн.</li>
+									<li>После реконструкции Керамо Марацци было установлено 27 машин для цифровой печати. В сочетании с усовершенствованной технологии производства кафеля можно получить цельное изображение без видимых переходов или стыков.</li>
+									</ul>
+									<p>На сегодняшний день разрабатывается и тестируется технология обработки керамического гранита DryPress. Благодаря сухому прессованию готовое изделие получается экологически чистым, качественным, безопасным и прочным.</p>
+									<h2>Преимущества приобретения плитки Kerama Marazzi в нашем магазине</h2>
+									<ul>
+									<li>В шоу-руме на ул. Волоколамское шоссе, д. 116, стр. 1 представлено свыше 500 наименований изделий от 200 мировых производителей. Продуманность каждой детали позволяет наглядно оценить применение кафеля в разных стилях интерьера.</li>
+									<li>При покупке товара каждому клиенту предлагается абсолютно бесплатно заказать дизайн-проект квартиры своей мечты в 3D формате.</li>
+									<li>Магазин предлагает только качественные товары и материалы, которые соответствуют требованиям нормативной документации.</li>
+									</ul>
+									<p>В интернет-магазине Aplitka купить плитку Kerama Marazzi можно по хорошей цене. Менеджер по телефону ☎<a href="tel:+74952255096" title="Позвонить менеджеру">+7 (495) 225-50-96</a> расскажет об особенностях выбранных коллекций и поможет оформить заказ. Доставка возможна по Москве и всей территории России.</p>
 								</div>
 								<div class="mt-16">
 									<button class="btn btn-more btn-more--show">
 										<span>Подробнее</span>
-										<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+										<svg class="icon icon-arrow-dropdown">
+											<use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use>
+										</svg>
 									</button>
 									<button class="btn btn-more btn-more--hide">
 										<span>Скрыть</span>
-										<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+										<svg class="icon icon-arrow-dropdown">
+											<use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use>
+										</svg>
 									</button>
 								</div>
 							</div>
-						</div><!-- /.col -->
+						</div>
+						<!-- /.col -->
 						<div class="col-md-auto order-0 order-md-1">
 							<div class="about-content-meta">
 								<div class="logo img-scale">
-									<img src="./images/brands/4.png" alt="41ZERO42">
+									<img src="./images/brands/4.png" alt="41ZERO42" />
 								</div>
 								<div class="download">
 									<a href="#" target="_blank" rel="noopener">
 										<span>Каталог продукции .pdf</span>
-										<img src="./images/icons/pdf.svg" alt="Каталог продукции .pdf">
+										<img src="./images/icons/pdf.svg" alt="Каталог продукции .pdf" />
 									</a>
 								</div>
 							</div>
-						</div><!-- /.col -->
-					</div><!-- /.row -->
-				</div><!-- /.about-content -->
+						</div>
+						<!-- /.col -->
+					</div>
+					<!-- /.row -->
+				</div>
+				<!-- /.about-content -->
 			</section>
 
 			<!-- Shop tabs -->
 			<div class="shop-tabs">
 				<div class="shop-tabs-item _current">
 					<a href="#">Коллекции <span>2456</span></a>
-				</div><!-- /.shop-tabs-item -->
+				</div>
+				<!-- /.shop-tabs-item -->
 				<div class="shop-tabs-item">
 					<a href="#">Товары <span>32457</span></a>
-				</div><!-- /.shop-tabs-item -->
-			</div><!-- /.shop-tabs -->
+				</div>
+				<!-- /.shop-tabs-item -->
+			</div>
+			<!-- /.shop-tabs -->
 
 			<!-- Shop filters -->
 			<div class="shop-filters">
@@ -106,9 +208,12 @@
 				<!-- Mobile filters -->
 				<div class="shop-filters-mobile">
 					<div class="sort dropdown">
-						<button type="button" class="sort-btn btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<button type="button" class="sort-btn btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">
 							<span>Сортировки</span>
-							<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+							<svg class="icon icon-arrow-dropdown">
+								<use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use>
+							</svg>
 						</button>
 						<div class="sort-list dropdown-menu">
 							<a rel="nofollow" href="?sort=-popular">Популярные</a>
@@ -119,50 +224,47 @@
 							<a rel="nofollow" href="?sort=-rating">По рейтингу</a>
 							<a rel="nofollow" href="?sort=-reviews_count">По отзывам</a>
 						</div>
-					</div><!-- /.sort -->
-				</div><!-- /.shop-filters-mobile -->
+					</div>
+					<!-- /.sort -->
+				</div>
+				<!-- /.shop-filters-mobile -->
 			</div>
 
 			<!-- Collections list -->
 			<div class="row row-items-48 row-cols-1 row-cols-sm-2 row-cols-xl-3">
-				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
-				</div><!-- /.col -->
-				<div class="col">
-					@@include('parts/collection-cards/collection-2.html')
-				</div><!-- /.col -->
-				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
-				</div><!-- /.col -->
+				<div class="col">@@include('parts/collection-cards/collection-1.html')</div>
+				<!-- /.col -->
+				<div class="col">@@include('parts/collection-cards/collection-2.html')</div>
+				<!-- /.col -->
+				<div class="col">@@include('parts/collection-cards/collection-1.html')</div>
+				<!-- /.col -->
 				<div class="col-12">
 					<a href="#" class="shop-promo">
 						<picture>
 							<source media="(min-width: 576px)" srcset="./images/promo-banner.png" />
 							<source media="(min-width: 320px)" srcset="./images/promo-mobile-banner.png" />
-							<img src="./images/promo-banner.png" alt="">
+							<img src="./images/promo-banner.png" alt="" />
 						</picture>
 					</a>
 				</div>
-				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
-				</div><!-- /.col -->
-				<div class="col">
-					@@include('parts/collection-cards/collection-2.html')
-				</div><!-- /.col -->
-				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
-				</div><!-- /.col -->
-			</div><!-- /.row -->
+				<div class="col">@@include('parts/collection-cards/collection-1.html')</div>
+				<!-- /.col -->
+				<div class="col">@@include('parts/collection-cards/collection-2.html')</div>
+				<!-- /.col -->
+				<div class="col">@@include('parts/collection-cards/collection-1.html')</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
 
 			<!-- Pagination -->
 			@@include('parts/pagination.html')
-
-		</div><!-- /.container -->
-	</div><!-- /.page-single-brands -->
+		</div>
+		<!-- /.container -->
+	</div>
+	<!-- /.page-single-brands -->
 
 	<!-- Calculation project form -->
 	@@include('parts/calculation-project.html')
-
 </main>
 
 @@include('parts/footer.html')
