Show all collection products tab

--- a/app/page-collection.html
+++ b/app/page-collection.html
@@ -259,7 +259,7 @@
 				<!-- Tabs -->
 				<div class="collection-products-tabs">
 					<div class="nav nav-tabs" role="tablist">
-						<a href="#products-tab-1" class="nav-link active" data-toggle="tab" role="tab">Вся плитка</a>
+						<a href="#products-tab-1" class="nav-link active" data-toggle="tab" data-toggle-all role="tab">Вся плитка</a>
 						<a href="#products-tab-2" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
 						<a href="#products-tab-3" class="nav-link" data-toggle="tab" role="tab">Настенная плитка</a>
 						<a href="#products-tab-4" class="nav-link" data-toggle="tab" role="tab">Напольная плитка</a>
@@ -325,15 +325,6 @@
 							<div class="col">
 								@@include('parts/product-cards/product-1.html')
 							</div><!-- /.col -->
-							<div class="col-12">
-								<a href="#" class="shop-promo">
-									<picture>
-										<source media="(min-width: 768px)" srcset="./images/promo-banner.png" />
-										<source media="(min-width: 320px)" srcset="./images/promo-mobile-banner.png" />
-										<img src="./images/promo-banner.png" alt="">
-									</picture>
-								</a>
-							</div>
 							<div class="col">
 								@@include('parts/product-cards/product-2.html')
 							</div><!-- /.col -->
