Refactoring show all collection products tab function

--- a/app/page-collection.html
+++ b/app/page-collection.html
@@ -274,6 +274,12 @@
 					<!-- Tab #1 -->
 					<div id="products-tab-1" class="tab-pane fade show active" role="tabpanel">
 						<div class="collection-products-list row row-items-24 row-cols-2 row-cols-lg-4">
+						</div><!-- /.row -->
+					</div><!-- /.tab-pane -->
+
+					<!-- Tab #2 -->
+					<div id="products-tab-2" class="tab-pane fade" role="tabpanel">
+						<div class="collection-products-list row row-items-24 row-cols-2 row-cols-lg-4">
 							<div class="col">
 								@@include('parts/product-cards/product-1.html')
 							</div><!-- /.col -->
@@ -310,8 +316,8 @@
 						</div><!-- /.row -->
 					</div><!-- /.tab-pane -->
 
-					<!-- Tab #2 -->
-					<div id="products-tab-2" class="tab-pane fade" role="tabpanel">
+					<!-- Tab #3 -->
+					<div id="products-tab-3" class="tab-pane fade" role="tabpanel">
 						<div class="collection-products-list row row-items-24 row-cols-2 row-cols-lg-4">
 							<div class="col">
 								@@include('parts/product-cards/product-2.html')
