--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="⭐️⭐️⭐️⭐️⭐️ Большой Ассортимент Недорогой Керамической Плитки В Москве В Интернет Магазине Аплитка. ✔ Заказать По ☎ +7 (495) 225-50-96. ☺ Бережная Доставка! Услуги Резки!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-	<link rel="icon" href="./images/favicon.png">
+	<link rel="icon" href="./images/favicon.svg">
 
 	<link rel="stylesheet" href="css/vendors/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -19,6 +19,9 @@
 			<style>
 				main {
 					padding-top: 32px;
+				}
+				.pages-logo img {
+					max-width: 240px;
 				}
 				.pages-list {
 					counter-reset: page;
