Input for cart item quantity

--- a/app/page-cart.html
+++ b/app/page-cart.html
@@ -43,7 +43,7 @@
 				<div class="cart-body">
 
 					<!-- Cart item -->
-					<form class="cart-item">
+					<form class="cart-item purchase-form">
 						<div class="cart-item-body sku">4532452</div>
 						<div class="cart-item-body image">
 							<a href="page-product.html" class="image-wrapper zoom-photo img-cover">
@@ -64,11 +64,13 @@
 								<button type="button" class="quantity-minus btn btn-primary">
 									<svg class="icon icon-minus"><use xlink:href="./images/symbol-defs.svg#minus"></use></svg>
 								</button>
-								<div class="quantity-amount"><div class="value">1.467</div></div>
+								<div class="quantity-amount">
+									<input type="number" min="0" max="999" data-mask="999.999" class="value form-control" value="3.336">
+								</div>
 								<button type="button" class="quantity-plus btn btn-primary">
 									<svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg>
 								</button>
-								<input type="text" name="quantity" hidden>
+								<input type="text" name="qty" class="changeQty itemQtyChanger" data-price="8950" data-count="1" data-one="3.336" value="3.336" hidden>
 							</div>
 						</div>
 						<div class="cart-item-body units" data-title="Ед. изм."><span>м<sup>2</sup></span></div>
