Added phone in sticky header. Added Fancybox video in top header & mobile menu. Update npm packages

--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -179,6 +179,12 @@
 
 			<div class="navigation">
 				<ul class="navigation-list">
+					<li class="video">
+						<a href="https://www.youtube.com/watch?v=5ryJFBJrnac" data-fancybox data-caption="Видео салона 500 м<sup>2</sup>">
+							<svg class="icon icon-youtube"><use xlink:href="./images/symbol-defs.svg#youtube"></use></svg>
+							<span>Видео салона 500 м<sup>2</sup></span>
+						</a>
+					</li>
 					<li class="project">
 						<a href="#projectModal" data-toggle="modal">
 							<svg class="icon icon-cube"><use xlink:href="./images/symbol-defs.svg#cube"></use></svg>
