Refactored Collections & Product page Heading structure

--- a/app/page-collection.html
+++ b/app/page-collection.html
@@ -30,9 +30,11 @@
 
 			<!-- Section: Heading -->
 			<section class="collection-heading">
-				<h1 class="title text-xxl">Коллекция Effecto</h1>
-				<sup class="in-stock">В наличии</sup>
-				<!-- <sup class="out-of-stock">Нет в наличии</sup> -->
+				<div class="heading">
+					<h1 class="heading-title text-xxl">Коллекция Effecto</h1>
+					<sup class="in-stock">В наличии</sup>
+					<!-- <sup class="out-of-stock">Нет в наличии</sup> -->
+				</div>
 			</section>
 
 			<!-- Section: Content -->
