--- a/app/page-product.html
+++ b/app/page-product.html
@@ -63,11 +63,11 @@
 
 			<!-- Section: Heading -->
 			<section class="product-heading">
-				<h1 class="title text-xxl">
-					<span>Керамогранит Newcon Белый Матовый R10A 60Х60 (K945786R0001VTE0) От Vitra (Турция)</span>
+				<div class="heading">
+					<h1 class="heading-title text-xxl">Керамогранит Newcon Белый Матовый R10A 60Х60 (K945786R0001VTE0) От Vitra (Турция)</h1>
 					<sup class="in-stock">В наличии</sup>
 					<!-- <sup class="out-of-stock">Нет в наличии</sup> -->
-				</h1>
+				</div>
 			</section>
 
 			<!-- Section: Content -->
