--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -129,6 +129,8 @@
 
 	@@include('mobile-menu.html')
 
+	@@include('modals/locations-modal.html')
+
 	@@include('modals/callback-modal.html')
 
 	@@include('modals/project-modal.html')
