--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -23,6 +23,13 @@
 				</a>
 			</div><!-- /.cart -->
 
+			<div class="locations">
+				<button type="button" class="locations-btn btn" data-toggle="modal" data-target="#locationsModal">
+					<svg class="icon icon-location-2"><use xlink:href="./images/symbol-defs.svg#location-2"></use></svg>
+					<span>Москва</span>
+				</button>
+			</div><!-- /.locations -->
+
 			<div class="catalog">
 				<ul class="catalog-list" role="navigation">
 					<li class="catalog-item">
